<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeeeee"
    tools:context=".AcercadeActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/MegaTexto"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_ventana"
        android:padding="@dimen/padding_ventana"
        android:background="#ffffff">
        <!-- El ScrollView sólo puede encerrar un objeto -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llContenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
        </ScrollView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo_foreground"
            android:layout_alignParentRight="true"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">
            <RadioButton
                android:id="@+id/rbQuienesSomos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quienes_somos"/>
            <RadioButton
                android:id="@+id/rbMision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mision"/>
            <RadioButton
                android:id="@+id/rbVision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision"/>
        </RadioGroup>

    </RelativeLayout>
</LinearLayout>